Fix the chrome url bar issue on mobile *_* ?

--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,6 @@ img {
 html {
     background-color: #242426;
     scroll-behavior: smooth;
-    height: 100%;
-    width: 100%;
 }
 
 section {
@@ -75,12 +73,6 @@ section {
 hr {
     position: relative;
     z-index: 1000;
-}
-
-#app {
-    position: fixed;
-    height: 100%;
-    width: 100%;
 }
 
 #navbar {
@@ -415,7 +407,8 @@ hr {
 .bigImageOverlay .bigImageOverlay-bg {
     display: block;
     position: fixed;
-    height: 100%;
+    min-height: -webkit-fill-available;
+    height: 100vh;
     width: 100%;
     background-color: #000000bf;
     z-index: 1;
